# Nettverksprogrammering

./: .gitignore  README.md
Forelesning/: CMakeLists.txt  mainF2.cpp  openMP.cpp
Oving1/: CMakeLists.txt  main.cpp  prim.hpp
Oving1/tests/: CMakeLists.txt  test.cpp  testPrim.cpp
Oving2/: CMakeLists.txt
Øving 2/src/: Registrer.java  RegistrerImpl.java  RegistrerKlient.java  RegistrerTjener.java  Teori.txt  Utstyr.java
Øving 3/src/oppgave1/: SocketClient.java  SocketServer.java  ThreadClientManager.java
Øving 3/src/oppgave2/: WebServer.java
Øving 4/: README.md
Øving 4/src/Oppgave1/: Klient.java  Server.java
Øving 4/src/Oppgave2/: JavaSSLClient.java  keystore
Øving 5/src/: db.sql
Øving 5/src/main/java/: Konto.java  KontoDAO.java  Main.java  Oppgaver.java
Øving 5/src/main/resources/: hibernate.cfg.xml
